complete about and projects pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,3 +45,8 @@ margin: 1.5rem 0;
  .dark .post-content a{
         color: red;
  }
+.english-text{
+    direction: ltr;
+    unicode-bidi: embed;
+    font-family: 'Arial', sans-serif;
+}
